# fhe-native-mamba3

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docker/: b300-fideslib.Dockerfile
docs/: artifact_ledger.md  backlog.md  checkpoint_workflows.md  fhe_lowering.md  roadmap.md  testing.md
fhemamba/: DESIGN.md  README.md
native/fideslib_stage0/: CMakeLists.txt
native/fideslib_stage0/include/: stage0_layout.hpp  stage1_rank_gate_eval.hpp  stage1_rank_gate_payload.hpp  stage1_tail_eval.hpp  stage1_tail_payload.hpp
native/fideslib_stage0/patches/: fideslib-v2.1.0-b300-ciphertext-lifetime-sync.patch  fideslib-v2.1.0-b300-keyswitch-stage-sync.patch  fideslib-v2.1.0-bootstrap-stage-sync.patch  fideslib-v2.1.0-ckks-data-type-api.patch  fideslib-v2.1.0-conjugate-api.patch  fideslib-v2.1.0-cuda13-cccl-include.patch  fideslib-v2.1.0-cuda13-graph-api.patch  fideslib-v2.1.0-linear-transform-api.patch
native/fideslib_stage0/src/: fideslib_client_server_probe.cpp  fideslib_ctpt_probe.cpp  fideslib_handoff.cpp  fideslib_handoff.hpp  stage0_static_mimo.cpp  stage1_bootstrap_probe.cpp  stage1_mamba2_artifact.cpp  stage1_mamba2_artifact.hpp  stage1_mamba2_config.cpp  stage1_mamba2_config.hpp  stage1_mamba2_decode_fideslib.cpp  stage1_mamba2_depth.cpp  stage1_mamba2_depth.hpp  stage1_mamba2_payload.cpp  stage1_mamba2_payload.hpp  stage1_mamba2_plan.cpp  stage1_mamba2_plan.hpp  stage1_mamba2_process.cpp  stage1_mamba2_process.hpp  stage1_rank_gate_fideslib.cpp  stage1_rank_gate_payload_eval.cpp  stage1_rotation_probe.cpp  stage1_tail_fideslib.cpp  stage1_tail_payload_eval.cpp
native/fideslib_stage0/tests/: test_stage0_layout.cpp  test_stage1_mamba2_artifact.cpp  test_stage1_mamba2_config.cpp  test_stage1_mamba2_depth.cpp  test_stage1_mamba2_payload.cpp  test_stage1_mamba2_plan.cpp  test_stage1_mamba2_process.cpp  test_stage1_rank_gate_payload.cpp  test_stage1_tail_payload.cpp
runs/: pbi-ops-003-issue-sync-plan-v03127.json  stage1-s045-dt-hidden-reduce-lora-merged-mamba130m-v03146.json  stage1-s045-dt-hidden-reduce-phase-report-v03148.json  stage1-s045-dt-hidden-reduce-phase-report-v03148.md  stage1-s045-dt-hidden-vs-dt-projection-reduce-comparison-v03148.json  stage1-s045-dt-hidden-vs-dt-projection-reduce-comparison-v03148.md  stage1-s045-dt-projection-reduce-lora-merged-mamba130m-v03148.json  stage1-s045-dt-projection-reduce-phase-report-v03148.json  stage1-s045-dt-projection-reduce-phase-report-v03148.md  stage1-s045-rank-reduce-bc-vs-dt-hidden-reduce-comparison-v03148.json  stage1-s045-rank-reduce-bc-vs-dt-hidden-reduce-comparison-v03148.md  stage1-s045-rank-reduce-bc-vs-dt-projection-reduce-comparison-v03148.json  stage1-s045-rank-reduce-bc-vs-dt-projection-reduce-comparison-v03148.md  stage1-s048-level-report-v03116.json  stage1-s048-level-telemetry-tiny-zero-v03116-payload-export.json  stage1-s048-level-telemetry-tiny-zero-v03116.json  stage1-s049-decrypt-failure-json-tiny-prev0125-v03117.json  stage1-s049-decrypt-failure-json-tiny-zero-v03117.json  stage1-s049-decrypt-failure-level-report-v03117.json  stage1-s049-decrypt-failure-zero-level-report-v03117.json  stage1-s050-mamba130m-prev0125-scale45-level-report-v03117.json  stage1-s050-mamba130m-prev0125-scale45-v03117.json  stage1-s050-mamba130m-prev0125-scale50-level-report-v03117.json  stage1-s050-mamba130m-prev0125-scale50-v03117.json  stage1-s050-tiny-prev0125-scale45-level-report-v03117.json  stage1-s050-tiny-prev0125-scale45-v03117.json  stage1-s051-tiny-chain2-level-report-v03118.json  stage1-s051-tiny-chain2-scale50-v03118.json  stage1-s052-mamba130m-chain-pair-collection-v03120.json  stage1-s052-mamba130m-chain-scaling-report-v03120.json  stage1-s052-mamba130m-chain1-level-report-v03120.json  stage1-s052-mamba130m-chain2-level-report-v03120.json  stage1-s052-mamba130m-chain2-scale50-v03118b.json  stage1-s052-small96-chain-scaling-report-v03119.json  stage1-s052-small96-chain1-level-report-v03119.json  stage1-s052-small96-chain1-scale50-v03119.json  stage1-s052-small96-chain2-level-report-v03118b.json  stage1-s052-small96-chain2-scale50-v03118b.json  stage1-s052-small96-recurrent-bootstrap-report-v03121.json  stage1-s052-tiny-chain-scaling-report-v03119.json  (+9 more)
scripts/: bootstrap_remote_dev.sh  build_b300_fideslib.sh  build_b300_fideslib_image.sh  build_client_decode_report.py  build_lazy_bootstrap_report.py  build_stage0_closeout_report.py  build_stage0_status_report.py  build_stage1_chain_scaling_report.py  build_stage1_checkpoint_cost_report.py  build_stage1_checkpoint_grouped_gate_inventory.py  build_stage1_ckks_level_report.py  build_stage1_comparison_report.py  build_stage1_composite_rotation_report.py  build_stage1_grouped_chain_inventory.py  build_stage1_model_handoff_report.py  build_stage1_openfhe_scale_sweep.py  build_stage1_phase_timing_comparison.py  build_stage1_phase_timing_report.py  build_stage1_plan.py  build_stage1_recurrent_bootstrap_report.py  build_stage1_runtime_projection.py  build_stage1_scaling_decision.py  build_stage1_state_major_layout_plan.py  build_stage1_tail_gap_report.py  build_stage2_dense_projection_decision.py  build_stage2_group_sparse_lora_plan.py  build_stage2_group_sparse_lora_report.py  build_stage2_learned_sketch_report.py  build_stage2_lora_replay_report.py  build_stage2_pruned_native_replay_report.py  build_stage2_range_lora_decision.py  build_stage2_sketch_evidence_report.py  build_synthetic_mamba_checkpoint.py  collect_safe_slurm_campaign.py  collect_slurm_job_artifact.py  collect_stage1_chain_scaling.py  coverage.sh  estimate_openfhe_stack_latency.py  export_stage1_checkpoint_tail_payload.py  export_stage1_rank_gate_chain_payload.py  (+57 more)
slurm/: checkpoint_sketch_matrix.sbatch  checkpoint_source_sketch_trace.sbatch  fhe_mamba3_smoke.sbatch  fideslib_build.sbatch  fideslib_examples.sbatch  fideslib_probe.sbatch  fideslib_stage0.sbatch  fideslib_stage0_sweep.sbatch  fideslib_stage1_bootstrap_probe.sbatch  fideslib_stage1_rank_gate_existing_payload.sbatch  fideslib_stage1_rank_gate_projection.sbatch  (+26 more)
(+500 files in other folders)
